--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+    <div id="content"></div>
+    <script type="text/babel" src="js/CommentBox.component.js"></script>
     <h1><%= title %></h1>
     <p>Welcome to
         <%= title %>
